crates/mlcg_builtin_macros/tests/ui/fail_non_emitted_parameter.rs
mod generated {
    mlcg_builtin_macros::include_manifest!("tests/non_emitted_parameter_manifest.toml");
}

fn main() {}
